[tool.poetry]
name = "pendulum"
version = "0.1.0"
description = ""
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.4.0"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
